# rust-ci-github-actions-workflow

./: .editorconfig  .env  .gitignore  .gitmodules  .lefthook.toml  Cargo.toml  LICENSE.md  README.md  TODO.md  Taskfile.dist.yaml  Taskfile.yaml  deny.toml  justfile  mise.toml  rustfmt.toml  tribble.yaml
.cargo/: config.toml
.config/: nextest.toml
.github/: labeler.yml
.github/workflows/: auto-merge.yaml  autofix.yaml  changelog.yaml  coverage.yaml  cross-build.yaml  dependency-review.yml  documentation.yaml  health.yaml  issues.yaml  licenses.yaml  lint.yaml  pr-labels.yaml  release-packaging.yaml  scorecard.yaml  security.yaml  test-with-coverage.yaml  test.yaml
assets/: README.md  sbom.json
backpack/: Cargo.toml
backpack/src/: errors.hbs  lib.rs  main.rs
backpack/tests/: litmus.rs
config/: README.md  config.json  config.k  config.kdl  config.rcl  config.toml  config.yaml
contrib/: README.md
docs/: README.md  TECHNOLOGIES.md  WHITE-PAPER.typ
docs/blog/: config.toml
docs/blog/content/pages/: about.md  another-page.md  cv.md
docs/blog/content/posts/: _index.md  first-post.md  fiveth-post.md  fourth-post.md  second-post.md  sixth-post.md  third-post.md
docs/blog/data/: socials.yml
docs/blog/data/cv/: education.yml  experience.yml  projects.yml  skills.yml  summary.yml
docs/landing-page/: config.toml
docs/technical/: book.toml
docs/technical/src/: chapter_1.md
docs/user-guide/: docusaurus.config.ts  package.json
examples/: README.md
packaging/nfpm/: nfpm.yaml
plugins/: README.md
roadmap/: README.md
scripts/: README.md  Taskfile.dist.yaml  Taskfile.local.yaml  install.sh  local.just
setup/: build.yaml  install-cross-build-packages.yaml  install-secrets-packages.yaml  install-task-packages.yaml  install-test-packages.yaml  install-vulnerabilities-packages.yaml
setup/files/FreeBSD/: FreeBSD.conf
src/: README.md
src/frontend/: README.md
src/lib/: README.md
src/tests/: README.md
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
