[package]
name = "test2"
version = "0.1.0"
authors = ["test@example.com"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "test2"
path = "src/main.rs"

[features]
coverage = []

[dev-dependencies]
demonstrate = "*"
pretty_assertions = "*"
wasm-bindgen-test = "0.3.56"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
smol = "2"
human-panic = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
