[package]
name = "test2"
version = "0.1.0"
authors = ["test@example.com"]
edition = "2021"
license = "MIT"
description = "Test"
repository = "https://github.com/yonasBSD/rust-ci-github-actions-workflow"
readme = "README.md"
keywords = ["template", "rust"]
categories = ["template"]

[[bin]]
name = "test2"
path = "src/main.rs"

[features]
coverage = []

[dev-dependencies]
wasm-bindgen-test = "0.3.56"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
smol = "2"
human-panic = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[dependencies]
demonstrate = { git = "https://github.com/yonasBSD/demonstrate" }
pretty_assertions = "1.4.1"
