[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = "3"
anyhow = "1"
xshell = "^0.2.2"
duct = "0.13.5"
glob = "0.3.0"
fs_extra = "1"
dialoguer = "^0.11.0"
xtaskops = "0.4.2"
